# cellarmind

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: database-model.md  domain-model.md  index.md  vision.md  workflows.md
docs/adr/: 0001-csv-import-only.md  0002-sqlite-is-source-of-truth.md  0003-wine-variant-format.md
examples/: cave.sample.csv
scripts/: premerge.sh
src/cellarmind/: __init__.py  __main__.py  cli.py
src/cellarmind/importing/: __init__.py  location_mapping.py  normalizer.py  schema.py  sqlite_importer.py
src/cellarmind/infrastructure/: csv_inspector.py
src/cellarmind/storage/: __init__.py  ai_window_estimator.py  audit.py  bottle_addition.py  bottle_movement.py  bottle_status.py  cellars.py  drinking_recommendation.py  drinking_window.py  inventory.py  jina_search.py  sqlite.py  (+7 more)
tests/: test_ai_window_estimator.py  test_ai_window_estimator_gemini.py  test_ai_window_estimator_jina_search.py  test_ai_window_estimator_ollama.py  test_audit.py  test_bottle_addition.py  test_bottle_movement.py  test_bottle_status.py  test_cellars.py  test_cli.py  test_csv_inspector.py  test_csv_normalizer.py  test_csv_validation.py  test_database_importer.py  test_database_schema.py  test_database_stats.py  test_drinking_recommendation.py  test_drinking_window_report.py  test_inventory.py  test_jina_search.py  test_location_mapping.py  test_placement_report.py  test_reference_window_search.py  test_reference_windows.py  test_reference_windows_fetcher.py  test_transfer_plan.py  test_window_comparison.py
